--- a/example/assets/static.css
+++ b/example/assets/static.css
@@ -65,12 +65,13 @@ li ul, li ul {
 p, ul, ol {
     font-size: 16px;
     line-height: 24px;
-    max-width: 540px;
+    max-width: 800px;
 }
 pre {
-    padding: 0px 24px;
+    padding: 10px;
     max-width: 800px;
     white-space: pre-wrap;
+    background: #fcfcfc;
 }
 code {
     font-family: Consolas, Monaco, Andale Mono, monospace;
@@ -80,13 +81,11 @@ code {
 aside {
     display: block;
     float: right;
-    width: 390px;
 }
 blockquote {
     border-left:.5em solid #eee;
     padding: 0 2em;
     margin-left:0;
-    max-width: 476px;
 }
 blockquote  cite {
     font-size:14px;
@@ -99,7 +98,6 @@ blockquote cite:before {
 
 blockquote p {  
     color: #666;
-    max-width: 460px;
 }
 hr {
     width: 540px;
